assets/css/lkc-elementor-widgets.css
/* ... */
.hero-slider-controls .slick-prev:hover,
.hero-slider-controls .slick-next:hover,
.hero-slider-controls .slick-prev:active,
.hero-slider-controls .slick-next:active,
.hero-slider-controls .slick-prev:focus,
.hero-slider-controls .slick-next:focus{
    border: 1px solid rgba(0,0,0,0.4);
    color: rgba(0,0,0,0.4);
    background-color: transparent;
}

.hero-slider-controls .slick-prev{
    left: -75px;
}
.hero-slider-controls .slick-next {
    right: -75px;
}


.hero-slider-wrapper{
    display: flex !important;
    width: 100%;
    height: 500px;
}

.hero-slider-image{
    width: 50%;
    height: 100%;

}
.hero-slider-image img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 0 20px;
}
.hero-slider-info{
    width: 50%;
    height: 100%;
    padding: 3em 2em;
}

.hero-slider-info__program{
    margin-bottom: .75rem;
}

.hero-slider-info h2{
    font-size: 30px;
}

.hero-slider-info a{
    color: #707070;
}

.hero-slider-info__top{
    height: 200px;
}
.hero-slider-info__date-time{
    position: absolute;
    bottom: 10%;
}

@media screen and (max-width: 992px) {
    .hero-slider-info__date-time{
        top: 80%;
    }
    .hero-slider-info{
        padding: 3em 0;
    }
    .hero-slider-info h2{
        font-size: 25px;
    }
    .hero-slider-controls{
        display: none;
    }
    .hero-slider-wrapper{
        flex-wrap: wrap;
        height: auto;
    }
    .hero-slider-info__top{
        height: 180px;
    }
    .hero-slider-image{
        width: 100%;
        height: 500px;
    }
    .hero-slider-info{
        width: 100%;
    }
}

/*
    Teams Widget Style
 */

.teams-widget-card {
    text-align: center;
    margin-bottom: 2rem;
}

img.teams-widget-card__image {
    object-fit: cover;
    border-radius: 0 15px;
    width: 200px;
}

h2.teams-widget-card__full_name {
    margin-top: 0.75rem !important;
}

p.teams-widget-card__job_title {
    margin-top: 0 !important;
    margin-bottom: 0.75rem;
}

p.teams-widget-card__job_title,
a.teams-widget-card__email {
    color: #707070;
}

a.teams-widget-card__email:hover {
    color: #015eab !important;
}

